# suitesparse-1

./: build.bash.ben
addons/: Makefile.am  configure.ac  suitesparse.pc.in
addons/AMD/: Makefile.am
addons/AMD/Demo/: Makefile.am
addons/AMD/Doc/: Makefile.am
addons/AMD/Source/: Makefile.am
addons/BTF/Source/: Makefile.am
addons/CAMD/: Makefile.am
addons/CAMD/Demo/: Makefile.am
addons/CAMD/Doc/: Makefile.am
addons/CAMD/Source/: Makefile.am
addons/CCOLAMD/Demo/: Makefile.am
addons/CCOLAMD/Source/: Makefile.am
addons/CHOLMOD/: Makefile.am
addons/CHOLMOD/Check/: Makefile.am
addons/CHOLMOD/Cholesky/: Makefile.am
addons/CHOLMOD/Core/: Makefile.am
addons/CHOLMOD/Demo/: Makefile.am
addons/CHOLMOD/Doc/: Makefile.am
addons/CHOLMOD/MatrixOps/: Makefile.am
addons/CHOLMOD/Modify/: Makefile.am
addons/CHOLMOD/Partition/: Makefile.am
addons/CHOLMOD/Supernodal/: Makefile.am
addons/COLAMD/Demo/: Makefile.am
addons/COLAMD/Source/: Makefile.am
addons/CXSparse/Demo/: Makefile.am
addons/CXSparse/Source/: Makefile.am
addons/KLU/: Makefile.am
addons/KLU/Demo/: Makefile.am
addons/KLU/Doc/: Makefile.am
addons/KLU/Source/: Makefile.am
addons/LDL/: Makefile.am
addons/LDL/Demo/: Makefile.am
addons/LDL/Doc/: Makefile.am
addons/LDL/Source/: Makefile.am
addons/RBio/Demo/: Makefile.am
addons/RBio/Source/: Makefile.am
addons/SPQR/: Makefile.am  configure.ac
addons/SPQR/Demo/: Makefile.am
addons/SPQR/Doc/: Makefile.am
addons/SPQR/Source/: Makefile.am
addons/UMFPACK/: Makefile.am
addons/UMFPACK/Demo/: Makefile.am
addons/UMFPACK/Doc/: Makefile.am
addons/UMFPACK/Source/: Makefile.am
addons/config/: check.am  common.am
addons/m4/: suitesparse_amd.m4  suitesparse_btf.m4  suitesparse_camd.m4  suitesparse_ccolamd.m4  suitesparse_cholmod.m4  suitesparse_colamd.m4  suitesparse_config.m4  suitesparse_cxsparse.m4  suitesparse_klu.m4  suitesparse_ldl.m4  suitesparse_rbio.m4  suitesparse_spqr.m4  suitesparse_umfpack.m4
