AC_INIT([suitesparse], [4.0.2], [davis@cise.ufl.edu])

AC_CONFIG_SRCDIR([SuiteSparse_config/SuiteSparse_config.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_AUX_DIR([config])

AM_INIT_AUTOMAKE([dist-bzip2 foreign])

# use silent rules if available - automake 1.11
m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES(yes)])

LT_INIT([disable-static])
AC_PROG_CC
AC_PROG_CXX
AC_LANG([C])

# Optional documentation
AX_SUITESPARSE_DOC

SUITESPARSE_CONFIG
SUITESPARSE_AMD
SUITESPARSE_COLAMD
SUITESPARSE_CAMD
SUITESPARSE_CCOLAMD
SUITESPARSE_CXSPARSE
SUITESPARSE_RBIO
SUITESPARSE_LDL
SUITESPARSE_BTF
SUITESPARSE_CHOLMOD
SUITESPARSE_KLU
SUITESPARSE_SPQR
SUITESPARSE_UMFPACK

AC_CONFIG_FILES([Makefile
                 suitesparse.pc])

AC_OUTPUT
